// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`RichTextToolbar should apply custom style 1`] = `
<View
  style={
    [
      {},
      {
        "backgroundColor": "red",
        "padding": 10,
      },
    ]
  }
>
  <FlatList>
    <FlatListItem>
      <Pressable
        onPress={[Function]}
      >
        <View
          style={
            {
              "marginRight": 8,
            }
          }
        >
          <Text>
            [undo]
          </Text>
        </View>
      </Pressable>
    </FlatListItem>
    <FlatListItem>
      <Pressable
        onPress={[Function]}
      >
        <View
          style={
            {
              "marginRight": 8,
            }
          }
        >
          <Text>
            [redo]
          </Text>
        </View>
      </Pressable>
    </FlatListItem>
    <FlatListItem>
      <Pressable
        onPress={[Function]}
      >
        <View
          style={
            {
              "marginRight": 8,
            }
          }
        >
          <Text>
            [B]
          </Text>
        </View>
      </Pressable>
    </FlatListItem>
    <FlatListItem>
      <Pressable
        onPress={[Function]}
      >
        <View
          style={
            {
              "marginRight": 8,
            }
          }
        >
          <Text>
            [I]
          </Text>
        </View>
      </Pressable>
    </FlatListItem>
    <FlatListItem>
      <Pressable
        onPress={[Function]}
      >
        <View
          style={
            {
              "marginRight": 8,
            }
          }
        >
          <Text>
            [U]
          </Text>
        </View>
      </Pressable>
    </FlatListItem>
    <FlatListItem>
      <Pressable
        onPress={[Function]}
      >
        <View
          style={
            {
              "marginRight": 8,
            }
          }
        >
          <Text>
            [UL]
          </Text>
        </View>
      </Pressable>
    </FlatListItem>
    <FlatListItem>
      <Pressable
        onPress={[Function]}
      >
        <View
          style={
            {
              "marginRight": 8,
            }
          }
        >
          <Text>
            [OL]
          </Text>
        </View>
      </Pressable>
    </FlatListItem>
    <FlatListItem>
      <Pressable
        onPress={[Function]}
      >
        <View
          style={
            {
              "marginRight": 8,
            }
          }
        >
          <Text>
            [X]
          </Text>
        </View>
      </Pressable>
    </FlatListItem>
    <FlatListItem>
      <Pressable
        onPress={[Function]}
      >
        <View
          style={
            {
              "marginRight": 8,
            }
          }
        >
          <Text>
            [&lt;&gt;]
          </Text>
        </View>
      </Pressable>
    </FlatListItem>
  </FlatList>
</View>
`;

exports[`RichTextToolbar should render toolbar with actions 1`] = `
<View
  style={
    [
      {},
      undefined,
    ]
  }
>
  <FlatList>
    <FlatListItem>
      <Pressable
        onPress={[Function]}
      >
        <View
          style={
            {
              "marginRight": 8,
            }
          }
        >
          <Text>
            [undo]
          </Text>
        </View>
      </Pressable>
    </FlatListItem>
    <FlatListItem>
      <Pressable
        onPress={[Function]}
      >
        <View
          style={
            {
              "marginRight": 8,
            }
          }
        >
          <Text>
            [redo]
          </Text>
        </View>
      </Pressable>
    </FlatListItem>
    <FlatListItem>
      <Pressable
        onPress={[Function]}
      >
        <View
          style={
            {
              "marginRight": 8,
            }
          }
        >
          <Text>
            [B]
          </Text>
        </View>
      </Pressable>
    </FlatListItem>
    <FlatListItem>
      <Pressable
        onPress={[Function]}
      >
        <View
          style={
            {
              "marginRight": 8,
            }
          }
        >
          <Text>
            [I]
          </Text>
        </View>
      </Pressable>
    </FlatListItem>
    <FlatListItem>
      <Pressable
        onPress={[Function]}
      >
        <View
          style={
            {
              "marginRight": 8,
            }
          }
        >
          <Text>
            [U]
          </Text>
        </View>
      </Pressable>
    </FlatListItem>
    <FlatListItem>
      <Pressable
        onPress={[Function]}
      >
        <View
          style={
            {
              "marginRight": 8,
            }
          }
        >
          <Text>
            [UL]
          </Text>
        </View>
      </Pressable>
    </FlatListItem>
    <FlatListItem>
      <Pressable
        onPress={[Function]}
      >
        <View
          style={
            {
              "marginRight": 8,
            }
          }
        >
          <Text>
            [OL]
          </Text>
        </View>
      </Pressable>
    </FlatListItem>
    <FlatListItem>
      <Pressable
        onPress={[Function]}
      >
        <View
          style={
            {
              "marginRight": 8,
            }
          }
        >
          <Text>
            [X]
          </Text>
        </View>
      </Pressable>
    </FlatListItem>
    <FlatListItem>
      <Pressable
        onPress={[Function]}
      >
        <View
          style={
            {
              "marginRight": 8,
            }
          }
        >
          <Text>
            [&lt;&gt;]
          </Text>
        </View>
      </Pressable>
    </FlatListItem>
  </FlatList>
</View>
`;

exports[`RichTextToolbar should render with selected action keys 1`] = `
<View
  style={
    [
      {},
      undefined,
    ]
  }
>
  <FlatList>
    <FlatListItem>
      <Pressable
        onPress={[Function]}
      >
        <View
          style={
            {
              "marginRight": 8,
            }
          }
        >
          <Text>
            [undo]
          </Text>
        </View>
      </Pressable>
    </FlatListItem>
    <FlatListItem>
      <Pressable
        onPress={[Function]}
      >
        <View
          style={
            {
              "marginRight": 8,
            }
          }
        >
          <Text>
            [redo]
          </Text>
        </View>
      </Pressable>
    </FlatListItem>
    <FlatListItem>
      <Pressable
        onPress={[Function]}
      >
        <View
          style={
            {
              "marginRight": 8,
            }
          }
        >
          <Text>
            [B*]
          </Text>
        </View>
      </Pressable>
    </FlatListItem>
    <FlatListItem>
      <Pressable
        onPress={[Function]}
      >
        <View
          style={
            {
              "marginRight": 8,
            }
          }
        >
          <Text>
            [I]
          </Text>
        </View>
      </Pressable>
    </FlatListItem>
    <FlatListItem>
      <Pressable
        onPress={[Function]}
      >
        <View
          style={
            {
              "marginRight": 8,
            }
          }
        >
          <Text>
            [U]
          </Text>
        </View>
      </Pressable>
    </FlatListItem>
    <FlatListItem>
      <Pressable
        onPress={[Function]}
      >
        <View
          style={
            {
              "marginRight": 8,
            }
          }
        >
          <Text>
            [UL]
          </Text>
        </View>
      </Pressable>
    </FlatListItem>
    <FlatListItem>
      <Pressable
        onPress={[Function]}
      >
        <View
          style={
            {
              "marginRight": 8,
            }
          }
        >
          <Text>
            [OL]
          </Text>
        </View>
      </Pressable>
    </FlatListItem>
    <FlatListItem>
      <Pressable
        onPress={[Function]}
      >
        <View
          style={
            {
              "marginRight": 8,
            }
          }
        >
          <Text>
            [X]
          </Text>
        </View>
      </Pressable>
    </FlatListItem>
    <FlatListItem>
      <Pressable
        onPress={[Function]}
      >
        <View
          style={
            {
              "marginRight": 8,
            }
          }
        >
          <Text>
            [&lt;&gt;]
          </Text>
        </View>
      </Pressable>
    </FlatListItem>
  </FlatList>
</View>
`;
